consumer/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer-service
  namespace: default
  labels:
    app: cadastro-cliente-consumer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: cadastro-cliente-consumer
